finished more tut.s

--- a/pages/MOLLER/Showermax.mdx
+++ b/pages/MOLLER/Showermax.mdx
@@ -5,7 +5,7 @@ import Image from 'next/image'
 
 # ShowerMax
 <small style={{ fontSize: "0.8em", color: "gray" }}>
- ~10 min
+ ~5 min
 </small>
 
 <br></br>
@@ -165,6 +165,11 @@ This is a brief video how the ShowerMax detector works.
 <div align = "center">
   <Yvideo video={{src: 'Ts_TciJqaF0', title: 'ShowerMax'}} /> 
 </div>
+
+## ShowerMax Summary
+
+In this section, we discussed the ShowerMax detector, which is a key component of the MOLLER experiment. Its main purpose is to make an independent measurment of the Apy, and to help us account for background events as an electromagnetic calorimeter. It does this by measuring Cherenkov radiation made from the electromagnetic showers of the scatterd electrons from the beam intereacting with the tungsten atoms. 
+
 
 
 {/*Video MOLLER part 3:
