--- a/pages/Tutorials/Basics/Terminal.mdx
+++ b/pages/Tutorials/Basics/Terminal.mdx
@@ -666,8 +666,9 @@ Now you will transfer an entire directory from your local machine to the remote 
     ```
   </Tab>
 </Tabs>
-
+<section id="scp_2">
 #### Copy a Directory from a Remote Server to Your Local Machine
+</section>
 
 <Tabs items={['macOS/Linux', 'Windows PowerShell', 'Windows Command Prompt']}>
   <Tab>
