--- a/pages/Tutorials/CAD/Basics.mdx
+++ b/pages/Tutorials/CAD/Basics.mdx
@@ -17,17 +17,9 @@ This tutorial is not meant to give you guidence on how to use the software. Ther
 
 ## Other Resources
 
-### Autodesk Inventor
-
-[Autodesk Inventor Tutorials](https://help.autodesk.com/view/INVNTOR/2021/ENU/?guid=GUID-25E3BABE-0FF4-4542-854E-AD2F59E4BB4A)
-
-### Solidworks
-
-[Solidworks Tutorials](https://www.solidworks.com/support/home)
-
-### Fusion 360
-
-[Fusion 360 Tutorials](https://help.autodesk.com/view/fusion360/ENU/courses/)
+- [Autodesk Inventor Tutorials](https://help.autodesk.com/view/INVNTOR/2021/ENU/?guid=GUID-25E3BABE-0FF4-4542-854E-AD2F59E4BB4A)
+- [Solidworks Tutorials](https://www.solidworks.com/support/home)
+- [Fusion 360 Tutorials](https://help.autodesk.com/view/fusion360/ENU/courses/)
 
 
 ## Downloading and Installing Inventor, Solidworks, and Fusion 360
