--- a/pages/Tutorials/Getting_started.mdx
+++ b/pages/Tutorials/Getting_started.mdx
@@ -9,4 +9,8 @@ import { Callout } from 'nextra-theme-docs'
 
 # What these tutorials are about
 
-These tutorials are ment to get you started on the basic skills you will need while working in Dr. McNulty's lab.
+These tutorials are ment to get you started on the basic skills you will need while working in Dr. McNulty's lab. Under the `Basics` You can find tutorials that will get you started using the fundamental software needed to work in the lab. How to use a terminal, how to use the ROOT analysis software, and how to get started with GEANT4.
+
+Under the `CAD` section you will find an introduction to downloading CAD software, then a walkthrough to printing your first 3D model using the 3D printer in the lab.
+
+These tutorials are only meant to introduce you to the software and hardware. It takes time and practice to acheive proficiency in any of these skills.
