--- a/pages/links.mdx
+++ b/pages/links.mdx
@@ -1,18 +1,75 @@
 import { Tab, Tabs } from 'nextra-theme-docs'
 import Video from '@/components/video'
 
-
-<div align="center">
 # Links
----
----
-{/* Make a bulleted list of links for MOLLER aligned in the center*/}
-  <div align="center">
-    <ul>
-      <li><a href="https://www.moller.com/">MOLLER</a></li>
-      <li><a href="https://www.moller.com/our-vehicles/">JLab</a></li>
-      <li><a href="https://www.moller.com/our-vehicles/m400-skycar/">ShowerMax</a></li>
-      <li><a href="https://www.moller.com/our-vehicles/m400-skycar/technical-specifications/">GitHub</a></li>
-    </ul>
-  </div>
-</div>
+
+## McNulty's Group Links
+
+- [McNulty's website](https://www2.cose.isu.edu/~mcnudust/)
+- [Elog](http://daq3.physics.isu.edu/elog/PVeS/)
+
+## MOLLER
+
+### Physics Background
+- [Electroweak Theory](https://en.wikipedia.org/wiki/Electroweak_interaction)
+- [Introduction to elementary particle physics](https://www.amazon.com/Introduction-Elementary-Particles-David-Griffiths/dp/3527406018) 
+- [Weak mixing angle](https://en.wikipedia.org/wiki/Weinberg_angle)
+
+### MOLLER Experiment
+
+- [MOLLER](https://moller.jlab.org/moller_root/)
+- [Wiki](https://moller.jlab.org/wiki/index.php/Main_Page)
+- [Remoll](https://github.com/JeffersonLab/remoll)
+
+## Terminal
+
+- [Linux Command Line Basics](https://ubuntu.com/tutorials/command-line-basics)
+- [Introduction to the Mac OS X Command Line](https://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line)
+- [Windows Command Prompt Tutorial](https://www.makeuseof.com/tag/a-beginners-guide-to-the-windows-command-line/)
+
+- [nano cheat sheet](https://www.nano-editor.org/dist/latest/cheatsheet.html)
+
+
+## ROOT
+
+- [ROOT Primer](https://root.cern/primer/)
+- [ROOT Manual](https://root.cern/manual/)
+- [ROOT Tutorials](https://root.cern/doc/master/group__Tutorials.html)
+- [ROOT Reference Guide](https://root.cern/doc/master/index.html)
+- [ROOT Forum](https://root-forum.cern.ch/)
+
+- [ROOT Install page](https://root.cern/install/)
+
+## GEANT4
+
+- [Official GEANT4 Website](https://geant4.web.cern.ch/)
+- [GEANT4 User's Guide](https://geant4-userdoc.web.cern.ch/UsersGuides/ForApplicationDeveloper/html/index.html)
+- [GEANT4 Reference](https://geant4-userdoc.web.cern.ch/UsersGuides/ForToolkitDeveloper/html/index.html)
+- [GEANT4 Forum](https://geant4-forum.web.cern.ch/)
+
+
+## CAD
+
+- [Autodesk]([website](https://www.autodesk.com/support/account/education/students-educators/get-started))
+
+- [Autodesk Inventor Tutorials](https://help.autodesk.com/view/INVNTOR/2021/ENU/?guid=GUID-25E3BABE-0FF4-4542-854E-AD2F59E4BB4A)
+
+- [Solidworks](https://www.solidworks.com/product/students)]
+- [Solidworks Tutorials](https://www.solidworks.com/support/home)
+
+- [Fusion 360 Tutorials](https://help.autodesk.com/view/fusion360/ENU/courses/)
+
+- [COSE](https://help.cose.isu.edu/)
+
+## 3D Printing
+
+- [S5 Manual](https://support.makerbot.com/s/article/1667410778241)
+
+- [Using Cura](https://support.makerbot.com/s/article/1667410778218)
+
+- [Troubleshooting](https://www.simplify3d.com/resources/print-quality-troubleshooting/)
+
+## Others
+
+- [conda](https://docs.conda.io/en/latest/miniconda.html)
+- [Homebrew](https://brew.sh/)
