--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,15 @@
-# LENS
+
 import Image from 'next/image'
 import Video from '@/components/video'
 import Yvideo from '@/components/yvideos'
 
+
+#  Dr. McNulty's Physics Lab.
+
 {/* Center the text */}
 <div align="center">
     {/* Round the edges of the image */}
-    <Image src="images/logo.svg" alt="LENS Logo" width={400} height={400} className="rounded-full" />
+    <Image src="/images/isu_logo.png" alt="ISU Logo" width={100} height={100} className="rounded-full" />
     {/* The description */}
-    LENS Labratory for experimental nuclear science.
+    ## At Idaho State University
 </div>
