fixed 3d print images

--- a/pages/Tutorials/CAD/3Dprinting.mdx
+++ b/pages/Tutorials/CAD/3Dprinting.mdx
@@ -53,7 +53,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_01.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_001.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -64,7 +64,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_20.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_002.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -78,7 +78,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_19.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_003.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -90,7 +90,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_04.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_004.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -102,7 +102,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_05.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_005.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -114,7 +114,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_06.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_006.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -126,7 +126,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_07.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_007.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -138,7 +138,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_08.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_008.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -151,7 +151,7 @@ Open Fusion 360 and create a new design.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_09.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_009.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -167,7 +167,7 @@ Great!
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_10.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_010.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -181,7 +181,7 @@ Before we get started printing our part lets take a look at the critical compone
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_17.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_011.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -195,7 +195,7 @@ This is where the model is printed. Always ensure it's clean. Depending on the t
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_18.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_012.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -212,7 +212,7 @@ The nozzle is the tip the material comes out of, the standard size is 0.4 mm, bu
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_16.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_013.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -225,7 +225,7 @@ The spool that holds the material; ensure it's properly loaded.
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_12.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_014.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -238,7 +238,7 @@ The X, Y, and Z axes that control the movement of the print head; checkfor smoot
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_21.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_015.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -251,7 +251,7 @@ The tube that feeds the material from the spool to the extruder; check for prope
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_13.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_016.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -264,7 +264,7 @@ The component that feeds the material from the spool to the extruder; check for 
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_14.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_017.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -277,7 +277,7 @@ The interface used to control the printer's settings and start prints; familiari
 <br></br>
 
 <div align = "center">
-<Image src="/images/3dprint/3dpr_15.png" width="600" height="400" />
+<Image src="/images/3dprint/3dpr_018.png" width="600" height="400" />
 </div>
 
 <br></br>
@@ -290,7 +290,7 @@ The interface used to control the printer's settings and start prints; familiari
     <br></br>
     <br></br>
     <div align = "center">
-    <Image src="/images/3dprint/3dpr_11.png" width="600" height="400" />
+    <Image src="/images/3dprint/3dpr_019.png" width="600" height="400" />
     </div>
 
     <br></br>
@@ -302,7 +302,7 @@ The interface used to control the printer's settings and start prints; familiari
     <br></br>
 
     <div align = "center">
-    <Image src="/images/3dprint/3dpr_21.png" width="600" height="400" />
+    <Image src="/images/3dprint/3dpr_021.png" width="600" height="400" />
     </div>
 
     <br></br>
@@ -314,7 +314,7 @@ The interface used to control the printer's settings and start prints; familiari
     <br></br>
 
     <div align = "center">
-    <Image src="/images/3dprint/3dpr_20.png" width="600" height="400" />
+    <Image src="/images/3dprint/3dpr_022.png" width="600" height="400" />
     </div>
 
     <br></br>
@@ -331,7 +331,7 @@ You should now see something like this:
     <br></br>
 
     <div align = "center">
-    <Image src="/images/3dprint/3dpr_20.png" width="600" height="400" />
+    <Image src="/images/3dprint/3dpr_023.png" width="600" height="400" />
     </div>
 
     <br></br>
